--- a/application-docker.yml
+++ b/application-docker.yml
@@ -1,6 +1,6 @@
 spring:
   config:
-    import: configserver:${http://config-service:8083}
+    import: "configserver:http://config-service:8083"
 eureka:
   client:
     service-url:
